--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "gulp-wait": "0.0.2",
     "jquery": "^3.3.1",
     "reset-css": "^3.0.0",
-    "run-sequence": "^2.2.1"
+    "run-sequence": "^2.2.1",
+    "scrollmagic": "^2.0.5",
+    "velocity-animate": "^1.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
